cluster/lab/monitoring/goldilocks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goldilocks
  namespace: monitoring
  annotations:
    hajimari.io/appName: "goldilocks"
    hajimari.io/enable: "true"
    hajimari.io/icon: "scale-unbalanced"
spec:
  rules:
    - host: goldilocks.hef.sh
      http:
        paths:
          - backend:
              service:
                name: goldilocks-dashboard
                port:
                  name: http
            path: /
            pathType: Prefix
